rt/test/old/errors/003/test.volt
//T compiles:no
//T error-message:5:17: error: expected
module test;

fn isSet(string key) void {}

fn main() i32
{
	return 0;
}
